# GoIt_Web_HW7

./: README.md  alembic.ini  models.py  my_select.py  pyproject.toml  reset_data.py  seed.py  university.db
alembic/: env.py
alembic/versions/: 79009233cac0_initial_migration.py
